# NonlinearTMM

./: .buildinfo  .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Examples.html  GettingStarted.html  Introduction.html  LICENSE  MANIFEST.in  Material.html  README.md  Reference.html  SecondOrderNLTMM.html  TMM.html  appveyor.yml  dev-requirements.txt  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  test-requirements.txt
.github/workflows/: pre-commit.yml  publish.yml  publish_docs.yml  pytest.yml
Examples/: ExampleNonlinearTMM.py  ExampleSecondOrderNonlinearTmm.py  ExampleTMM.py  ExampleTMMForWaves.py
NonlinearTMM/: _Material.py  _NonlinearTMM.py  _SecondOrderNLTMM.py  _SecondOrderNLTMMCython.pyi  _Waves.py  __init__.py  __init__.pyi
NonlinearTMM/src/: .gitattributes  CppSecondOrderNLTMM.pxd  SecondOrderNLTMM.pyx
NonlinearTMM/src/NonlinearTMMCpp/: .gitignore  NonlinearTMMCpp.sln
NonlinearTMM/src/NonlinearTMMCpp/NonlinearTMMCpp/: .gitignore  Common.cpp  Common.h  Main.cpp  Material.cpp  Material.h  NonlinearLayer.cpp  NonlinearLayer.h  NonlinearTMM.cpp  NonlinearTMM.h  NonlinearTMMCpp.vcxproj  SecondOrderNLTMM.cpp  SecondOrderNLTMM.h  Waves.cpp  Waves.h
NonlinearTMM/src/cpp/: Common.cpp  Common.h  Material.cpp  NonlinearLayer.cpp  NonlinearTMM.cpp  NonlinearTMM.h  SecondOrderNLTMM.cpp  SecondOrderNLTMM.h  Waves.cpp  Waves.h
Tests/: conftest.py  test_Material.py  test_MaterialConstructors.py  test_SPDC.py  test_SecondOrderNLTMM.py  test_SecondOrderNLTMMForWaves.py  test_TMM.py  test_TMMForWaves.py
Tests/LabPy/: Constants.py  Core.py  Materials.py  __init__.py
Tests/LabPy/_Tmm/: _NonlinearTmm.py  _TmmForWavePackets.py  __init__.py
Tests/materials/main/Ag/: Johnson.yml
Tests/materials/main/Au/: Johnson.yml
Tests/materials/special/: gaussian_test.yml
_modules/: index.html
_modules/NonlinearTMM/: _Material.html
_sources/: Examples.rst.txt  GettingStarted.rst.txt  Introduction.rst.txt  Material.rst.txt  Reference.rst.txt  SecondOrderNLTMM.rst.txt  TMM.rst.txt  index.rst.txt
_static/: documentation_options.js
docs/: GettingStarted.rst  Introduction.rst  Makefile  Material.rst  Reference.rst  SecondOrderNLTMM.rst  TMM.rst  conf.py  index.rst  make.bat
