[build-system]
requires = [
    "setuptools>=68",
    "setuptools_scm",
    "numpy>=2",
    "Cython>=3.0,<4",
    "eigency>=3.4.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "NonlinearTMM"
description = "Nonlinear transfer matrix method"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ardi Loot", email = "ardi.loot@outlook.com" },
]
dynamic = ["version"]
dependencies = [
    "numpy>=2",
    "scipy>=1.14",
    "eigency>=3.4.0.0",
]

[project.optional-dependencies]
test = ["pyyaml", "pytest"]

[dependency-groups]
dev = ["pyyaml", "pytest", "matplotlib", "sphinx", "numpydoc"]

[project.urls]
Homepage = "https://github.com/ardiloot/NonlinearTMM"
Repository = "https://github.com/ardiloot/NonlinearTMM"
Documentation = "https://ardiloot.github.io/NonlinearTMM/"

[tool.setuptools]
packages = ["NonlinearTMM"]

[tool.setuptools.package-data]
"NonlinearTMM" = [
    "src/*.pxd",
    "src/NonlinearTMMCpp/NonlinearTMMCpp/*.h",
    "src/NonlinearTMMCpp/NonlinearTMMCpp/*.cpp",
    "src/*.pyx",
]

[tool.setuptools_scm]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "NonlinearTMM/src/*.pyx",
    "NonlinearTMM/src/*.pxd",
    "third_party/eigen",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"Tests/LabPy/**" = ["E701", "E711", "E721", "E731", "E741", "F821"]
"Tests/test_*.py" = ["E741"]

[tool.pytest.ini_options]
testpaths = ["Tests"]
