[build-system]
requires = [
    "setuptools>=68",
    "setuptools_scm",
    "numpy>=2",
    "Cython>=3.0,<4",
    "eigency>=3.4.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "NonlinearTMM"
description = "Nonlinear transfer matrix method"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ardi Loot", email = "ardi.loot@outlook.com" },
]
dynamic = ["version"]
dependencies = [
    "numpy>=2",
    "scipy>=1.14",
    "eigency>=3.4.0.0",
]

[dependency-groups]
dev = ["pyyaml", "pytest", "pre-commit", "pyright", "matplotlib", "sphinx", "numpydoc"]

[project.urls]
Homepage = "https://github.com/ardiloot/NonlinearTMM"
Repository = "https://github.com/ardiloot/NonlinearTMM"
Documentation = "https://ardiloot.github.io/NonlinearTMM/"

[tool.setuptools]
packages = ["NonlinearTMM"]

[tool.setuptools.package-data]
"NonlinearTMM" = [
    "py.typed",
    "*.pyi",
    "src/*.pxd",
    "src/cpp/*.h",
    "src/cpp/*.cpp",
    "src/*.pyx",
]

[tool.setuptools_scm]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "NonlinearTMM/src/*.pyx",
    "NonlinearTMM/src/*.pxd",
    "third_party/eigen",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"Tests/LabPy/**" = ["B905", "E731", "E741", "F401", "F403"]

[tool.pytest.ini_options]
testpaths = ["Tests"]

[tool.pyright]
typeCheckingMode = "standard"
include = ["NonlinearTMM", "Examples", "Tests"]
exclude = ["NonlinearTMM/src", "Tests/LabPy"]
